--- a/package.json
+++ b/package.json
@@ -11,25 +11,29 @@
   "dependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
-    "element-ui": "^1.4.2",
+    "element-ui": "^1.4.13",
     "vue": "^2.4.2",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^13.0.2",
+    "vue-quill-editor": "^3.0.5",
     "vue-router": "^2.7.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-component": "^0.10.0",
+    "babel-plugin-import": "^1.6.7",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "bmaplib.markerclusterer": "^1.0.6",
+    "bootstrap-sass": "^3.3.7",
     "compression-webpack-plugin": "^1.1.3",
     "cross-env": "^3.2.3",
     "css-loader": "^0.28.4",
@@ -43,7 +47,10 @@
     "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
+    "iview": "^2.11.0",
+    "jquery": "^3.3.1",
     "karma-webpack": "^2.0.5",
+    "laravel-mix": "^2.1.1",
     "lodash": "^4.17.4",
     "lodash.clonedeep": "^4.5.0",
     "node-sass": "^4.5.3",
